--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-72x72-precomposed.png">
   <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-114x114-precomposed.png">
   <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-144x144-precomposed.png">
-  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
   <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="css/main.css">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
@@ -115,7 +115,7 @@
                           </div>
                           <div class="g1">
                             <div class="item-box clearfix">
-                              <i class="icon-facebook"></i>
+                              <i class="fa-linkedin-in"></i>
                               <div class="item-data">
                                 <h3><a href="https://www.linkedin.com/in/jiang-peng-a4bb787a/">Peng Jiang</a></h3>
                                 <p>LinkedIn Profile</p>
