change icons and background

--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@
           <!-- Tab List -->
             <ul class='etabs'>
                 <li class='tab' id="tab-about">
-                  <a href="#about"><i class="icon-user"></i><span> About Me</span></a>
+                  <a href="#about"><i class="fas fa-user"></i><span> About Me</span></a>
                 </li>
                 <li class='tab'>
-                  <a href="#resume"><i class="icon-file-text"></i><span> Resume</span></a>
+                  <a href="#resume"><i class="fas fa-file-alt"></i><span> Resume</span></a>
                 </li>
                 <li class='tab'>
-                  <a href="#portfolio"><i class="icon-heart"></i><span> Portfolio</span></a>
+                  <a href="#portfolio"><i class="fas fa-heart"></i><span> Portfolio</span></a>
                 </li>
                 <li class='tab'>
-                  <a href="#contact"><i class="icon-envelope"></i><span> Contact</span></a>
+                  <a href="#contact"><i class="fas fa-envelope"></i><span> Contact</span></a>
                 </li>
             </ul>
           <!-- End Tab List -->
@@ -106,7 +106,7 @@
                         <div class="contact-info">
                           <div class="g1">
                             <div class="item-box clearfix">
-                              <i class="icon-envelope"></i>
+                              <i class="fas fa-envelope"></i>
                               <div class="item-data">
                                 <h3><a href="mailto:sunny@mrova.com">superjp500@gmail.com</a></h3>
                                 <p>Email Address</p>
@@ -115,7 +115,7 @@
                           </div>
                           <div class="g1">
                             <div class="item-box clearfix">
-                              <i class="fa-linkedin-in"></i>
+                              <i class="fab fa-linkedin-in"></i>
                               <div class="item-data">
                                 <h3><a href="https://www.linkedin.com/in/jiang-peng-a4bb787a/">Peng Jiang</a></h3>
                                 <p>LinkedIn Profile</p>
@@ -124,10 +124,10 @@
                           </div>
                           <div class="g1">
                             <div class="item-box clearfix">
-                              <i class="icon-twitter"></i>
+                              <i class="fab fa-github"></i>
                               <div class="item-data">
-                                <h3><a href="http://twitter.com/mRovaSolutions">@mRovaSolutions</a></h3>
-                                <p>Twitter Handle</p>
+                                <h3><a href="https://github.com/PeterJayawesome">@PeterJayawesome</a></h3>
+                                <p>Github</p>
                               </div>
                             </div>
                           </div>
@@ -338,33 +338,33 @@
                        <div class="g1">
                          <div class="sny-icon-box">
                            <div class="sny-icon">
-                              <i class="icon-globe"></i>
+                              <i class="fas fa-map-marker-alt"></i>
                             </div>
                             <div class="sny-icon-content">
                               <h4>My Address</h4>
-                              <p>Some Apartment 405 in a jungle nearby a restaurant</p>
+                              <p>San Jose, CA</p>
                             </div>
                          </div>
                        </div>
                        <div class="g1">
                          <div class="sny-icon-box">
                            <div class="sny-icon">
-                              <i class="icon-phone"></i>
+                              <i class="fas fa-phone"></i>
                             </div>
                             <div class="sny-icon-content">
                               <h4>Mobile Number</h4>
-                              <p>999-9999-999<br/>999-1112-999</p>
+                              <p>213-327-7304</p>
                             </div>
                          </div>
                        </div>
                        <div class="g1">
                          <div class="sny-icon-box">
                            <div class="sny-icon">
-                              <i class="icon-user"></i>
+                              <i class="fas fa-user"></i>
                             </div>
                             <div class="sny-icon-content">
                               <h4>About Me</h4>
-                              <p>I love to work, so don't be shy, i am just an email away.</p>
+                              <p>superjp500@gmail.com</p>
                             </div>
                          </div>
                        </div>
@@ -376,11 +376,11 @@
             </div>
         </div>
         <!-- End Tab Container -->
-        <footer>
+        <!-- <footer>
             <p>
                 Designed with lots of love at <a href="http://www.mrova.com" title="Pune web designing company">mRova</a>. Just <a href="http://www.mrova.com/free-one-page-responsive-html-resume-template/">Click me to download</a> this template for free :).
             </p>
-        </footer>
+        </footer> -->
     </div><!-- #main -->
 </div><!-- #main-container -->
 
