--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
       <script>window.html5 || document.write('<script src="js/vendor/html5shiv.js"><\/script>')</script>
       <![endif]-->
+
 </head>
   <body class="bg-fixed bg-1">
 <!--[if lt IE 7]>
@@ -140,26 +141,30 @@
                     <section class="clearfix">
                         <div class="g2">
                             <h3>
-                                Work Experience
+                                Relevant Work Experience
                             </h3>
                             <ul class="no-list work">
                                 <li>
                                     <h5>
-                                        Freelance Web Designer
-                                    </h5><span class="label label-info">2009-2010</span>
+                                        Software Dev Intern
+                                    </h5><span class="label label-info">Jun 2014-Aug 2014</span>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
+                                        Project: function layer design for new generation Electric Power Network Automation System. 
+                                        Director: Mr. Miao Zhang
                                     </p>
                                 </li>
                                 <li>
                                     <h5>
-                                        Python Programmer
-                                    </h5><span class="label label-info">2010-2011</span>
+                                        Software Dev Intern
+                                    </h5><span class="label label-info">Jun 2015-Aug 2015</span>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
+                                        Project: Customs and Express Supervision Center Systems Integration. Director: Mrs. Lingling Shang
+                                        . Programming Language: C++
+                                        . Operating system: Linux
+                                        . Database Software: Oracle
                                     </p>
                                 </li>
-                                <li>
+                                <!-- <li>
                                     <h5>
                                         Social Media Lunatic
                                     </h5><span class="label label-info">2011-2012</span>
@@ -174,7 +179,7 @@
                                     <p>
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
                                     </p>
-                                </li>
+                                </li> -->
                             </ul>
                             <h3>
                                 Education
@@ -182,18 +187,27 @@
                             <ul class="no-list work">
                                 <li>
                                     <h5>
-                                        NoUse School
-                                    </h5><span class="label label-success">2001-2002</span>
+                                        Tsinghua University, Department of  Material Sci.& Eng.(DMSE), Beijing, China
+                                    </h5><span class="label label-success">2010-2014</span>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
+                                        Bachelor of Engineering, Materials Science and Engineering with a focus on Materials Physics
                                     </p>
                                 </li>
                                 <li>
                                     <h5>
-                                        Super Useless College
-                                    </h5><span class="label label-warning">2002-2008</span>
+                                        University of Southern California, Department of Chemical Eng. & Material Sci.
+                                    </h5><span class="label label-warning">2014-2016</span>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
+                                        Master of Engineering, Materials Engineering
+                                        Relevant courses: Introduction to Programming Systems Design (A)
+                                    </p>
+                                </li>
+                                <li>
+                                    <h5>
+                                        CodingDojo, Coding Bootcamp in San Jose
+                                    </h5><span class="label label-warning">Aug 2017-Nov 2017</span>
+                                    <p>
+                                        Technology Learnt: Python, RoR, Angular, Node.js, Express,Mysql DB, MongoDB
                                     </p>
                                 </li>
                             </ul>
