--- a/index.html
+++ b/index.html
@@ -159,10 +159,19 @@
                                     </h5><span class="label label-info">Jun 2015-Aug 2015</span>
                                     <p>
                                         Project: Customs and Express Supervision Center Systems Integration. Director: Mrs. Lingling Shang
-                                        . Programming Language: C++
-                                        . Operating system: Linux
-                                        . Database Software: Oracle
                                     </p>
+                                        <ul>
+                                            <li>
+                                                <p>Programming Language: C++</p>
+                                            </li>
+                                            <li>
+                                                <p>Operating system: Linux</p>
+                                            </li>
+                                            <li>
+                                                <p>Database: Oracle</p>
+                                            </li>
+
+                                        </ul>
                                 </li>
                                 <!-- <li>
                                     <h5>
