--- a/index.html
+++ b/index.html
@@ -160,35 +160,19 @@
                                     <p>
                                         Project: Customs and Express Supervision Center Systems Integration. Director: Mrs. Lingling Shang
                                     </p>
-                                        <ul>
-                                            <li>
-                                                <p>Programming Language: C++</p>
-                                            </li>
-                                            <li>
-                                                <p>Operating system: Linux</p>
-                                            </li>
-                                            <li>
-                                                <p>Database: Oracle</p>
-                                            </li>
+                                    <ul class="detaillist">
+                                        <li class="details">
+                                            <p>Programming Language: C++</p>
+                                        </li>
+                                        <li class="details">
+                                            <p>Operating system: Linux</p>
+                                        </li>
+                                        <li class="details">
+                                            <p>Database: Oracle</p>
+                                        </li>
 
-                                        </ul>
+                                    </ul>
                                 </li>
-                                <!-- <li>
-                                    <h5>
-                                        Social Media Lunatic
-                                    </h5><span class="label label-info">2011-2012</span>
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
-                                    </p>
-                                </li>
-                                <li>
-                                    <h5>
-                                        Being Awesome
-                                    </h5><span class="label label-danger">2012-Till Death</span>
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
-                                    </p>
-                                </li> -->
                             </ul>
                             <h3>
                                 Education
@@ -205,7 +189,7 @@
                                 <li>
                                     <h5>
                                         University of Southern California, Department of Chemical Eng. & Material Sci.
-                                    </h5><span class="label label-warning">2014-2016</span>
+                                    </h5><span class="label label-success">2014-2016</span>
                                     <p>
                                         Master of Engineering, Materials Engineering
                                         Relevant courses: Introduction to Programming Systems Design (A)
@@ -214,7 +198,7 @@
                                 <li>
                                     <h5>
                                         CodingDojo, Coding Bootcamp in San Jose
-                                    </h5><span class="label label-warning">Aug 2017-Nov 2017</span>
+                                    </h5><span class="label label-success">Aug 2017-Nov 2017</span>
                                     <p>
                                         Technology Learnt: Python, RoR, Angular, Node.js, Express,Mysql DB, MongoDB
                                     </p>
@@ -227,61 +211,57 @@
                                     Skills
                                 </h3>
                                 <h5>
-                                    Software
-                                </h5>
-                                <div class="meter emerald">
-                                    <span style="width: 33.3%"><span>Photoshop</span></span>
-                                </div>
-                                <div class="meter carrot">
-                                    <span style="width: 90%"><span>Illustrator</span></span>
-                                </div>
-                                <div class="meter wisteria">
-                                    <span style="width: 60%"><span>InDesign</span></span>
-                                </div>
-                                <div class="meter sunflower">
-                                    <span style="width: 40%"><span>Firework</span></span>
-                                </div>
-                                <div class="meter midnight">
-                                    <span style="width: 70%"><span>Dreamweaver</span></span>
-                                </div>
-                                <div class="meter pomengrate">
-                                    <span style="width: 60%"><span>Microsoft Office</span></span>
-                                </div>
-                                <div class="meter asbestos">
-                                    <span style="width: 65%"><span>Linux</span></span>
-                                </div>
-                                <div class="break"></div>
-                                <h5>
-                                    Design
-                                </h5>
-                                <div class="meter emerald">
-                                    <span style="width: 33.3%"><span>User Interface</span></span>
-                                </div>
-                                <div class="meter carrot">
-                                    <span style="width: 90%"><span>Typography</span></span>
-                                </div>
-                                <div class="meter wisteria">
-                                    <span style="width: 60%"><span>Web Applications</span></span>
-                                </div>
-                                <div class="break"></div>
-                                <h5>
                                     Programming Language
                                 </h5>
                                 <div class="meter emerald">
-                                    <span style="width: 53.3%"><span>HTML/CSS</span></span>
+                                    <span style="width: 80%"><span>HTML/CSS</span></span>
                                 </div>
                                 <div class="meter carrot">
-                                    <span style="width: 80%"><span>PHP/MySql</span></span>
+                                    <span style="width: 80%"><span>MySql</span></span>
                                 </div>
                                 <div class="meter wisteria">
-                                    <span style="width: 95%"><span>jQuery/JavaScript</span></span>
+                                    <span style="width: 85%"><span>jQuery/JavaScript</span></span>
                                 </div>
                                 <div class="meter sunflower">
                                     <span style="width: 75%"><span>Ruby</span></span>
                                 </div>
                                 <div class="meter asbestos">
-                                    <span style="width: 82%"><span>Python</span></span>
+                                    <span style="width: 90%"><span>Python</span></span>
                                 </div>
+                                <div class="meter pomengrate">
+                                    <span style="width: 50%"><span>Java</span></span>
+                                </div>
+                                <div class="meter midnight">
+                                    <span style="width: 45%"><span>C++</span></span>
+                                </div>
+                                <h5>
+                                    Frontend/Backend Framework
+                                </h5>
+                                <div class="meter emerald">
+                                    <span style="width: 85%"><span>Django</span></span>
+                                </div>
+                                <div class="meter carrot">
+                                    <span style="width: 80%"><span>Angular4</span></span>
+                                </div>
+                                <div class="meter wisteria">
+                                    <span style="width: 75%"><span>Ruby on Rails</span></span>
+                                </div>
+                                <div class="meter asbestos">
+                                    <span style="width: 60%"><span>Node.js/Express</span></span>
+                                </div>
+                                <div class="break"></div>
+                                
+                                <h5>
+                                    Software
+                                </h5>
+                                
+                                <div class="meter pomengrate">
+                                    <span style="width: 70%"><span>Microsoft Office</span></span>
+                                </div>
+                                <div class="meter asbestos">
+                                    <span style="width: 55%"><span>Linux</span></span>
+                                </div>
+                                <div class="break"></div>
                             </div>
                         </div>
                     </section>
