--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Peng Jiang - Traveller - Free Thinker - Game Player</title>
+  <title>Peng Jiang - Web Developer - Free Thinker - Game Player</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
   <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
@@ -272,20 +272,21 @@
                     <section class="clearfix">
                         <div class="g1">
                             <div class="image">
-                                <!-- <img src="http://lorempixel.com/306/306/sports/1" alt=""> -->
+                                <!-- <img src="http://lorempixel.com/306/306/sports/2" alt=""> -->
                                 <div class="image-overlay">
                                     <div class="image-link">
-                                        <a href="http://lorempixel.com/606/606/sports/1" class="btn">Full View</a>
+                                        <a href="http://lorempixel.com/606/606/sports/2" class="btn">Full View</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="g1">
                             <div class="image">
-                                <!-- <img src="http://lorempixel.com/306/306/sports/2" alt=""> -->
+                                <img src="images/bike_market.png" alt="bike market">
                                 <div class="image-overlay">
                                     <div class="image-link">
-                                        <a href="http://lorempixel.com/606/606/sports/2" class="btn">Full View</a>
+                                        <p>Practice project for website building with MEAN(MongoDB, Express, Angular, Node.js) technology.</p>
+                                        <a href="https://github.com/PeterJayawesome/bike_market" class="btn">Full View</a>
                                     </div>
                                 </div>
                             </div>
